# ckanext-example-default-group-type

./: MANIFEST.in  README.md  setup.cfg  test.ini
.github/workflows/: test.yml
ckanext/example_default_group_type/: plugin.py
ckanext/example_default_group_type/assets/: script.js  webassets.yml
ckanext/example_default_group_type/i18n/: ckanext-example_default_group_type.pot
ckanext/example_default_group_type/i18n/de/LC_MESSAGES/: ckanext-example_default_group_type.mo  ckanext-example_default_group_type.po
ckanext/example_default_group_type/tests/: test_plugin.py
